--- a/views/discinstance_detail.pug
+++ b/views/discinstance_detail.pug
@@ -6,6 +6,7 @@ block content
 
   p #[strong Color:] #{discinstance.color} 
   p #[strong Weight:] #{discinstance.weight + "g"}
+  p #[strong Price:] #{"$" + discinstance.price}
 
   hr
   p
