add photo to discinstance form

--- a/views/discinstance_form.pug
+++ b/views/discinstance_form.pug
@@ -36,6 +36,10 @@ block content
       label(for='price') Price:
       input#price.form-control(type='number', name='price', required value=(undefined===discinstance ? '' : discinstance.price))
 
+    div.form-group
+    label(for='photo') Photo:
+    input#photo.form-control(type='file', name='photo',)
+
 
     button.btn.btn-primary(type='submit') Submit
 
