--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,13 @@ html(lang='en')
                 a(href='/catalog/disc/create') Create new disc
               li
                 a(href='/catalog/discinstance/create') Create new disc instance (copy)
+              li
+                a(href='/catalog/login') Login
+              li
+                form(action='/catalog/logout', method='POST')
+                  button.btn.btn-link(type='submit') Logout
+  
+  
 
         div(class='col-sm-10')
           block content
